--- a/gb/25/12/3/n14647751.md
+++ b/gb/25/12/3/n14647751.md
@@ -5,7 +5,7 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/01/id14422686-trump-id5797088-GettyImages-2194990747-600x400.webp" />
 <h6>图为2025年1月20日，美国总统川普在上任当天于白宫椭圆形办公室签署了多项行政命令。(Anna Moneymaker/Getty Images)</h6>
 <hr>
-	<p>【大纪元2025年12月03日讯】（大纪元记者王君宜报导）美国总统唐纳德?川普（Donald Trump，特朗普）周二（12月2日）正式签署《台湾保证落实法案》（Taiwan Assurance Implementation Act，H.R.1512），使其成为法律。该法要求国务院定期检视并报告现行对台交流指引，并评估是否存在可解除的限制性措施。此举被视为华府在台海局势紧张之际进一步强化美台关系的最新动作。</p>
+	<p>【大纪元2025年12月03日讯】（大纪元记者王君宜报导）美国总统唐纳德?川普（Donald Trump，特朗普）周二（12月2日）正式签署《台湾保证落实法案》（Taiwan Assurance Implementation Act,H.R.1512），使其成为法律。该法要求国务院定期检视并报告现行对台交流指引，并评估是否存在可解除的限制性措施。此举被视为华府在台海局势紧张之际进一步强化美台关系的最新动作。</p>
 <p>根据<ahref="https://www.congress.gov/bill/119th-congress/house-bill/1512">美国国会文件</a>，该法案要求国务院至少每五年提交一次审查报告，阐明相关交流指引如何深化美台关系，并评估是否有具体机会解除过去历史因素所形成的美台互动限制。</p>
 <p>该法案源自2020年《台湾保证法案》（Taiwan Assurance Act）的扩充，原仅要求国务院进行一次性检查，而新法则要求自即日起“永久化”此机制，每五年至少进行一次全面审查，并在审查完成后90天内向国会提交报告。</p>
 <p>美国于1979年与中华民国（台湾）断交后，行政部门制定了一系列对台接触红线，对美台官员互动的层级、场合与公开程度施加限制。此次立法的核心，正是要求解除这些延续逾四十年但并无法律强制力的规范。</p>
@@ -13,18 +13,20 @@
 <p>瓦格纳在<ahref="https://x.com/RepAnnWagner/status/1991164176492814526">声明</a>中表示，法案向北京“释放明确讯号：美国将坚决反对中国共产党企图主导该地区并在全球范围内扩张影响力的危险行径。”</p>
 <p>此法案签署正值地缘政治紧张局势升温之际。上月初，日本首相高市早苗在日本国会答询中指出，中共若以武力夺取台湾，将对日本构成“生存危机事态”，此言可能触发日本军事介入的法律条件，引发北京强烈反弹。</p>
 <p>高市早苗的假设性表述凸显亚太盟友对台海局势的担忧，也与美国长期奉行的“战略模糊”形成呼应。依该政策，美国保留在台海冲突中可能介入的选项，但不明言是否会出兵协防台湾；然而，随着中共军事压力持续上升，这项传统策略近年在华府愈发受到关注与检视。</p>
+<p>中华民国总统府周三（12月3日）发布新闻稿指出，美国总统川普正式签署《台湾保证实施法案》，总统府表达诚挚欢迎与感谢。</p>
+<p>总统府发言人郭雅慧表示，这项法案的通过生效，肯定美国与台湾交往的价值，支持更紧密的台美关系，也是台美间奠基于民主、自由、人权等共同价值的坚实象征，别具意义。</p>
 <h2>美国加速反制北京“误用2758号决议”</h2>
 <p>今年稍早众议院同时通过另一部《台湾国际团结法案》（Taiwan International Solidarity Act），明确反对中共将联合国2758号决议（UNGA Resolution 2758）曲解为“台湾无权参与联合国体系”。</p>
 <p>美国政府近年多次批评中共排挤台湾参与国际组织。美方在今年4月通过驻联合国代表团及国务院对外<ahref="https://usun.usmission.gov/remarks-at-a-un-security-council-arria-formula-meeting-on-unilateralism-and-bullying-practices-on-international-relations/">声明</a>批评北京长期将联大2758号决议当成“政治工具”，以阻挡台湾参与联合国体系。</p>
 <p>美方强调，2758号决议仅处理“谁代表中国”的席位问题，并未涉及台湾地位，也未授权中共代表台湾，因此不应被用作排除台湾参与国际组织的依据。</p>
 <p>责任编辑：叶紫微#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645563.md#1">印尼苏门答腊岛洪灾救援困难 已致248人死</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645549.md#1">川普政府与西北大学达和解 恢复联邦补助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645423.md#1">折扣带动黑五买气 网购强劲 实体店回温</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/29/n14645425.md#1">组图：斯里兰卡暴雨酿重灾 123死130失踪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/13/n10139001.md#1" target="_blank">高诵芬、徐家祯：抄家</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/23/n10928592.md#1" target="_blank">【视频】法轮功在俄罗斯 各行业学员身心受益</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/3/n10020053.md#1" target="_blank">对知识份子的迫害——思想改造运动</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
